--- a/emailTemplates/monthlyNotification.html
+++ b/emailTemplates/monthlyNotification.html
@@ -310,8 +310,8 @@
                     <div class="content">
                         <!-- START CENTERED WHITE CONTAINER -->
                         <span class="preheader"
-                            >This is preheader text. Some clients will show this
-                            text as a preview.</span
+                            >Just a quick reminder to check in on your
+                            Dashboard.</span
                         >
                         <table
                             role="presentation"
@@ -390,10 +390,7 @@
                                         </span>
                                         <br />
                                         Don't like these emails?
-                                        <a
-                                            href="https://www.itsmydaily.com/contact"
-                                            >Unsubscribe</a
-                                        >.
+                                        <a href="{{UNSUB_URL}}">Unsubscribe</a>.
                                     </td>
                                 </tr>
                                 <tr>
